--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(fw)
+set(PROJECT_NAME "fw")
 
 set(CMAKE_VERBOSE_MAKEFILE true)
 
 set(CMAKE_INSTALL_PREFIX "/usr/local/fw")
+
+set(CMAKE_BUILD_TYPE Release)
+
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/deploy/cmake")
 
 execute_process(
     COMMAND sh -c "git rev-parse HEAD | cut -c 1-16"
@@ -22,6 +27,15 @@ execute_process(
 )
 message("tag: " ${PROJECT_TAG})
 
+execute_process(
+    COMMAND sh -c "uname -s"
+    TIMEOUT 3
+	OUTPUT_VARIABLE PROJECT_OS
+	OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+string(TOLOWER ${PROJECT_OS} PROJECT_OS)
+message("os: " ${PROJECT_OS})
+
 
 execute_process(
     COMMAND sh -c "sed -i '' 's/#define bpfTag      0x0000000000000000/#define bpfTag      0x${PROJECT_TAG}/' ${CMAKE_CURRENT_SOURCE_DIR}/bpf/fw.bpf.c"
@@ -33,3 +47,20 @@ execute_process(
     TIMEOUT 3
 )
 
+execute_process(
+    COMMAND sh -c "mkdir -p ${CMAKE_CURRENT_SOURCE_DIR}/bin"
+    COMMAND sh -c "CGO_ENABLED=0 GOOS=${PROJECT_OS} GOARCH=amd64 go build -a -ldflags '-X pkg/meta.tag=0x${PROJECT_TAG} -X pkg/meta.commit=0x${PROJECT_COMMIT} -extldflags \"-static\"' -o ${CMAKE_CURRENT_SOURCE_DIR}/bin/${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/cmd/cmd.go"
+    TIMEOUT 20
+)
+
+install(DIRECTORY deploy DESTINATION .)
+install(DIRECTORY bin DESTINATION .)
+
+set(CPACK_PACKAGE_NAME                      "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION                   "${PROJECT_TAG}")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY       "efficient firewall base of ebpf/xdp")
+set(CPACK_PACKAGE_CONTACT                   "cugriver@163.com")
+set(CPACK_PACKAGING_INSTALL_PREFIX          "${CMAKE_INSTALL_PREFIX}")
+
+include(rpm)
+include(CPack)
