#richard.sun: cmake synax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,9 +83,9 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/${PROJECT_NAME}.cmake)
 
 if(PROJECT_OS STREQUAL "darwin")
     include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/tgz/tgz.cmake)
-elseif(DEB_PKG)
+elseif(EXISTS DEB_PKG)
     include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/deb/deb.cmake)
-elseif(RPM_PKG)
+elseif(EXISTS RPM_PKG)
     include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/rpm/rpm.cmake)
 else()
     message("don't support os")
