#richard.sun: fedora

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,8 @@ elseif(EXISTS "/etc/apt")
     include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/deb/deb.cmake)
 elseif(EXISTS "/etc/yum")
     include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/rpm/rpm.cmake)
+elseif(EXISTS "/etc/dnf")
+    include(${CMAKE_CURRENT_SOURCE_DIR}/deploy/rpm/rpm.cmake)
 else()
     message("don't support os")
 endif()
