--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,5 +17,8 @@ jobs:
         go-version: 1.16
 
     - name: rule
-      run: go test -v ./pkg/rule
+      run: go test -v -count=1 -cover  ./pkg/rule
+
+    - name: fw
+      run: go test -v -count=1 -cover -test.run Test_port_merge ./pkg/fw/
 
